# apps.livebox.data-provider-slave

./: CMakeLists.txt  org.tizen.data-provider-slave.desktop  org.tizen.data-provider-slave.efl  org.tizen.data-provider-slave.manifest  org.tizen.data-provider-slave.rule  org.tizen.data-provider-slave.xml
data/: .icon_font.edc.swp  CMakeLists.txt  icon.edc  icon_effect.edc  icon_effect_font.edc  icon_font.edc
icon_src/: main.c  script_handler.c
include/: client.h  conf.h  connection.h  critical_log.h  dbox.h  debug.h  fault.h  lb.h  main.h  so_handler.h  theme_loader.h  update_monitor.h  util.h
packaging/: org.tizen.data-provider-slave.manifest  org.tizen.data-provider-slave.spec
res/: CMakeLists.txt  org.tizen.data-provider-slave_ChangeableColorInfo.xml
src/: client.c  conf.c  connection.c  critical_log.c  dbox.c  fault.c  lb.c  main.c  so_handler.c  theme_loader.c  update_monitor.c  util.c  util_wayland.c  util_x11.c
stub/: main.c
