ADD_CUSTOM_TARGET(icon.edj ALL
		COMMAND edje_cc -sd ${CMAKE_CURRENT_SOURCE_DIR} -id ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/icon.edc icon.edj
		DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/icon.edc
)
ADD_DEPENDENCIES(${PROJECT_NAME} icon.edj)
INSTALL(FILES icon.edj DESTINATION /usr/apps/org.tizen.${PROJECT_NAME}/res/edje)
